--- a/playbooks/adhoc/atomic_openshift_tutorial_reset.yml
+++ b/playbooks/adhoc/atomic_openshift_tutorial_reset.yml
@@ -10,15 +10,29 @@
   tasks:
     - service: name={{ item }} state=stopped
       with_items:
+        - openvswitch
+        - origin-master
+        - origin-node
+        - atomic-openshift-master
+        - atomic-openshift-node
         - openshift-master
         - openshift-node
-        - openvswitch
         - atomic-enterprise-master
         - atomic-enterprise-node
 
     - yum: name={{ item }} state=absent
       with_items:
         - openvswitch
+        - origin
+        - origin-master
+        - origin-node
+        - origin-sdn-ovs
+        - tuned-profiles-origin-node
+        - atomic-openshift
+        - atomic-openshift-master
+        - atomic-openshift-node
+        - atomic-openshift-sdn-ovs
+        - tuned-profiles-atomic-openshift-node
         - atomic-enterprise
         - atomic-enterprise-master
         - atomic-enterprise-node
@@ -34,6 +48,9 @@
       changed_when: False
 
     - shell: systemctl daemon-reload
+      changed_when: False
+
+    - shell: find /var/lib/origin/openshift.local.volumes -type d -exec umount {} \; 2>/dev/null || true
       changed_when: False
 
     - shell: find /var/lib/atomic-enterprise/openshift.local.volumes -type d -exec umount {} \; 2>/dev/null || true
@@ -53,14 +70,22 @@
 
     - file: path={{ item }} state=absent
       with_items:
-        - /var/lib/atomic-enterprise
-        - /etc/sysconfig/atomic-enterprise
-        - /etc/atomic-enterprise
-        - /etc/openshift
         - /etc/openshift-sdn
         - /root/.kube
-        - /etc/sysconfig/openshift
+        - /etc/origin
+        - /etc/atomic-enterprise
+        - /etc/openshift
+        - /var/lib/origin
         - /var/lib/openshift
+        - /var/lib/atomic-enterprise
+        - /etc/sysconfig/origin-master
+        - /etc/sysconfig/origin-node
+        - /etc/sysconfig/atomic-openshift-master
+        - /etc/sysconfig/atomic-openshift-node
+        - /etc/sysconfig/openshift-master
+        - /etc/sysconfig/openshift-node
+        - /etc/sysconfig/atomic-enterprise-master
+        - /etc/sysconfig/atomic-enterprise-node
 
     - user: name={{ item }} state=absent remove=yes
       with_items:
