--- a/roles/lib_zabbix/tasks/create_template.yml
+++ b/roles/lib_zabbix/tasks/create_template.yml
@@ -30,6 +30,9 @@
     key: "{{ item.key }}"
     name: "{{ item.name | default(item.key, true) }}"
     value_type: "{{ item.value_type | default('int') }}"
+    description: "{{ item.description | default('', True) }}"
+    multiplier: "{{ item.multiplier | default('', True) }}"
+    units: "{{ item.units | default('', True) }}"
     template_name: "{{ template.name }}"
     applications: "{{ item.applications }}"
   with_items: template.zitems
@@ -41,8 +44,9 @@
     zbx_server: "{{ server }}"
     zbx_user: "{{ user }}"
     zbx_password: "{{ password }}"
-    description: "{{ item.description }}"
-    dependencies: "{{ item.dependencies | default([], true) }}"
+    name: "{{ item.name }}"
+    description: "{{ item.description | default('', True) }}"
+    dependencies: "{{ item.dependencies | default([], True) }}"
     expression: "{{ item.expression }}"
     priority: "{{ item.priority }}"
     url: "{{ item.url | default(None, True) }}"
