--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -12,10 +12,6 @@
     msg: "openshift_master_cluster_password must be set for multi-master installations"
   when: openshift_master_ha | bool and not openshift.master.cluster_defer_ha | bool and openshift_master_cluster_password is not defined
 
-- name: Install Master package
-  yum: pkg={{ openshift_product_type | default('openshift') }}-master state=present
-  register: install_result
-
 - name: Set master facts
   openshift_facts:
     role: master
@@ -59,7 +55,11 @@
       api_server_args: "{{ osm_api_server_args | default(None) }}"
       controller_args: "{{ osm_controller_args | default(None) }}"
       product_type: "{{ openshift_product_type | default('openshift') }}"
-      service_type: "{{ 'origin' if deployment_type == 'origin' else 'atomic-enterprise' }}"
+      service_type: "{{ 'origin' if deployment_type == 'origin' else 'atomic-openshift' }}"
+
+- name: Install Master package
+  yum: pkg={{ openshift.common.service_type }}-master state=present
+  register: install_result
 
 # TODO: These values need to be configurable
 - name: Set dns facts
@@ -115,7 +115,7 @@
 
 - name: Configure master settings
   lineinfile:
-    dest: /etc/sysconfig/{{ product_type }}-master
+    dest: /etc/sysconfig/{{ openshift.common.service_type }}-master
     regexp: "{{ item.regex }}"
     line: "{{ item.line }}"
   with_items:
@@ -127,7 +127,7 @@
   - restart master
 
 - name: Start and enable master
-  service: name={{ service_type }}-master enabled=yes state=started
+  service: name={{ openshift.common.service_type }}-master enabled=yes state=started
   when: not openshift_master_ha | bool
   register: start_result
 
