--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Install the OpenShift package for admin tooling
-  yum: pkg={{ product_type }} state=present
+- name: Install the base package for admin tooling
+  yum: pkg={{ openshift.common.service_type }} state=present
   register: install_result
 
 - name: Reload generated facts
