--- a/roles/openshift_node/handlers/main.yml
+++ b/roles/openshift_node/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: restart node
-  service: name={{ service_type }}-node state=restarted
+  service: name={{ openshift.common.service_type }}-node state=restarted
