--- a/playbooks/gce/openshift-cluster/terminate.yml
+++ b/playbooks/gce/openshift-cluster/terminate.yml
@@ -7,12 +7,18 @@
   - vars.yml
   tasks:
   - set_fact: scratch_group=tag_env-{{ cluster_id }}
+  - name: show scratch group 
+    debug: var=groups[scratch_group]
   - add_host:
       name: "{{ item }}"
       groups: oo_hosts_to_terminate
       ansible_ssh_user: "{{ deployment_vars[deployment_type].ssh_user | default(ansible_ssh_user, true) }}"
       ansible_sudo: "{{ deployment_vars[deployment_type].sudo }}"
-    with_items: groups[scratch_group] | default([]) | difference(['localhost']) | difference(groups.status_terminated)
+    with_items: groups[scratch_group] | default([]) | difference(['localhost'])
+    #| difference(groups.status_terminated)
+    # This difference is not working
+    # It's working properly without it
+
   - name: show oo_hosts_to_terminate
     debug: var=groups['oo_hosts_to_terminate']
 
