Updates for zbx ans module

--- a/roles/os_zabbix/vars/template_heartbeat.yml
+++ b/roles/os_zabbix/vars/template_heartbeat.yml
@@ -1,9 +1,11 @@
 ---
 g_template_heartbeat:
   name: Template Heartbeat
+  zapplications:
+  - Heartbeat
   zitems:
   - name: Heartbeat Ping
-    hostid:
+    application: Heartbeat
     key: heartbeat.ping
   ztriggers:
   - description: 'Heartbeat.ping has failed on {HOST.NAME}'
