--- a/roles/os_zabbix/vars/template_os_linux.yml
+++ b/roles/os_zabbix/vars/template_os_linux.yml
@@ -3,88 +3,171 @@ g_template_os_linux:
   name: Template OS Linux
   zitems:
   - key: kernel.uname.sysname
+    applications:
+    - Kernel
     value_type: string
 
   - key: kernel.all.cpu.wait.total
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.all.cpu.irq.hard
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.all.cpu.idle
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.uname.distro
+    applications:
+    - Kernel
     value_type: string
 
   - key: kernel.uname.nodename
+    applications:
+    - Kernel
     value_type: string
 
   - key: kernel.all.cpu.irq.soft
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.all.load.15_minute
+    applications:
+    - Kernel
     value_type: float
 
   - key: kernel.all.cpu.sys
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.all.load.5_minute
+    applications:
+    - Kernel
     value_type: float
 
   - key: mem.freemem
+    applications:
+    - Memory
     value_type: int
 
   - key: kernel.all.cpu.nice
+    applications:
+    - Kernel
     value_type: int
 
   - key: mem.util.bufmem
+    applications:
+    - Memory
     value_type: int
 
   - key: swap.used
+    applications:
+    - Memory
     value_type: int
 
   - key: kernel.all.load.1_minute
+    applications:
+    - Kernel
     value_type: float
 
   - key: kernel.uname.version
+    applications:
+    - Kernel
     value_type: string
 
   - key: swap.length
+    applications:
+    - Memory
     value_type: int
 
   - key: mem.physmem
+    applications:
+    - Memory
     value_type: int
 
   - key: kernel.all.uptime
+    applications:
+    - Kernel
     value_type: int
 
   - key: swap.free
+    applications:
+    - Memory
     value_type: int
 
   - key: mem.util.used
+    applications:
+    - Memory
     value_type: int
 
   - key: kernel.all.cpu.user
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.uname.machine
+    applications:
+    - Kernel
     value_type: string
 
   - key: hinv.ncpu
+    applications:
+    - Kernel
     value_type: int
 
   - key: mem.util.cached
+    applications:
+    - Memory
     value_type: int
 
   - key: kernel.all.cpu.steal
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.all.pswitch
+    applications:
+    - Kernel
     value_type: int
 
   - key: kernel.uname.release
+    applications:
+    - Kernel
     value_type: string
 
   - key: proc.nprocs
+    applications:
+    - Kernel
     value_type: int
+
+  - key: filesys.avail
+    applications:
+    - Disk
+    value_type: int
+
+  - key: filesys.capacity
+    applications:
+    - Disk
+    value_type: int
+
+  - key: filesys.free
+    applications:
+    - Disk
+    value_type: int
+
+  - key: filesys.full
+    applications:
+    - Disk
+    value_type: float
+
+  - key: filesys.used
+    applications:
+    - Disk
+    value_type: float
